app/src/main/java/com/example/jokeapp/domain/Errors/StringRes.kt
package com.example.jokeapp.domain.Errors

annotation class StringRes
